test/JavaScriptEngineSwitcher.ConsoleApplication/Files/recursive-execution/compilation-error/first-file.js
num = num * 3;
executeFile(directoryPath + "/second-file.js");